--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
+  "name": "papershelf-backend",
+  "version": "1.0.0",
+  "description": "PaperShelf Backend API",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-g-api": "^1.0.4",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.16.0",
+    "nodemailer": "^7.0.3"
   }
 }
