--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ EMAIL_PORT=587
 EMAIL_USER=itiprojects7@gmail.com
 EMAIL_PASS=rjll qsyd ogep zgkp
 FROM_NAME=PaperShelf
+
+SUPERADMIN_EMAIL=itiprojects7@gmail.com
