--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "cros": "^1.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-g-api": "^1.0.4",
